# kstar

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Singularity  app.py  example2.sas  example3.sas  plan_counter.py  plan_topk.sh  plan_topq.sh  plan_unordered_topq.sh  requirements.txt  run.py  top_k.bib
VAL/.git-CONFLICT-dc62baefdb2838f1e2a64f8115940ce4/: config  index  packed-refs
VAL/.git-CONFLICT-dc62baefdb2838f1e2a64f8115940ce4/logs/refs/remotes/origin/: HEAD
VAL/.git-CONFLICT-dc62baefdb2838f1e2a64f8115940ce4/objects/pack/: pack-78c0fb1dcf6396254d33f64398c9faff3e88239f.idx
VAL/.git-CONFLICT-dc62baefdb2838f1e2a64f8115940ce4/refs/heads/: master
benchmarks/easy-instances/: 1-2.pddl  1goods-2trucks-2markets-1depots.pddl  2goods-2trucks-2markets-1depots.pddl  probBLOCKS-2-0.pddl  probBLOCKS-3-0.pddl
deploy/: deployment.yaml  pvc.yaml  service.yaml
driver/: aliases.py  arguments.py  main.py  sanity_checker.py
examples/: diamond.sas  diamond3.sas  diamond_easy.sas  example2.sas  example4.sas
experiments/topk/: common_setup.py  parser.py  v0.py  val_plans.sh
issues/issue4/: v1.py
issues/issue6/: v1.py
issues/issue8/: v1.py
sanity/: sanity_checker.py
search/: DownwardFiles.cmake  abstract_task.cc  global_operator.cc  global_state.h  planner.cc  search_engine.h  search_space.h  state_id.cc  state_id.h
search/algorithms/: priority_queues.h
search/heuristics/: blind_search_heuristic.cc
search/kstar/: kstar.cc  util.h
search/open_lists/: alternation_open_list.cc  epsilon_greedy_open_list.cc
search/search_engines/: enforced_hill_climbing_search.cc  iterated_search.cc  top_k_eager_search.cc  top_k_eager_search.h
search/structural_symmetries/: graph_creator.cc  group.cc  operator_permutation.cc  operator_permutation.h  permutation.cc  permutation.h
search/tasks/: plan_forbid_reformulated_task.cc  plan_forbid_reformulated_task.h
search/utils/: util.h
solution_validation/: missing_solutions  topk_plan_validator.py  util.py
src/: tags
src/VAL/: Action.h  CMakeLists.txt  Makefile  Proposition.h  main.cpp  ptree.h
src/cmake_modules/: FastDownwardMacros.cmake
src/search/: DownwardFiles.cmake  abstract_task.cc  global_operator.cc  global_operator.h  global_state.cc  global_state.h  globals.cc  globals.h  graphviz_writer.cc  graphviz_writer.h  planner.cc  search_engine.h  search_space.cc  search_space.h  search_statistics.cc  search_statistics.h  state_action_pair.cc  state_action_pair.h  state_registry.cc  state_registry.h  tags  task_proxy.cc
src/search/algorithms/: heaps.h  priority_queues.h
src/search/kstar/: kstar.cc  kstar.h  kstar_types.h  plan_reconstructor.cc  plan_reconstructor.h  successor_generator.cc  successor_generator.h  util.cc  util.h
src/search/open_lists/: open_list.h  pareto_open_list.cc  standard_scalar_open_list.cc  tiebreaking_open_list.cc  type_based_open_list.cc
src/search/operator_counting/: state_equation_constraints.h
src/search/pdbs/: pattern_collection_generator_systematic.h
src/search/search_engines/: eager_search.cc  eager_search.h  forbid_plan_eager_search.cc  forbid_plan_eager_search.h  kstar.cc  kstar.h  kstar_util.cc  kstar_util.h  lazy_search.cc  top_k_eager_search.cc  top_k_eager_search.h
src/search/structural_symmetries/: graph_creator.cc  graph_creator.h  group.cc  group.h  permutation.cc  permutation.h
src/search/tasks/: original_goals_task.cc  original_goals_task.h  plan_forbid_reformulated_task.cc  plan_forbid_reformulated_task.h
src/search/utils/: system.cc  util.h
src/translate/: sas_tasks.py  translate.py
